[tool.poetry]
name = "dumpling"
version = "0.1.0"
description = "Crossword clue search tool"
authors = ["Zach Banks <zjbanks@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.1.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
black = "^22.3.0"
types-Flask = "^1.1.6"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
mypy_path = "stubs"
files = "dumpling.py"
